--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -31,7 +31,7 @@ videojs("87150445").ready(function(){
   controls preload="auto" width="640" height="264"
   poster="http://patoa.files.wordpress.com/2008/03/dreizehntes.png%3Fw%3D700"
   data-setup='{"example_option":true}'>
- <source src="http://vimeo.com/87150445" type='video/mp4' />
+ <source src="http://vimeo.com/87150445" type='video' />
  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
 </video>
 
