--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -7,14 +7,6 @@
 
 <script>
 
-videojs("87150445").ready(function(){
-  var myPlayer = 87150445;
-
-  // EXAMPLE: Start playing the video.
-  myPlayer.play();
-
-});
-
          $().ready(function() {
     var BV = new $.BigVideo();
     BV.init();
@@ -28,7 +20,7 @@ videojs("87150445").ready(function(){
 
 <div id="big-video-wrap">
 <video id="example_video_1" class="video-js vjs-default-skin"
-  poster="http://patoa.files.wordpress.com/2008/03/dreizehntes.png%3Fw%3D700"
+  poster="http://img.galerie.chip.de/imgserver/communityimages/639600/639685/1280x.jpg"
   data-setup='{"example_option":true}'>
  <source src="http://vimeo.com/87150445" type='video' />
  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
