--- a/app/views/pages/tasche.html.erb
+++ b/app/views/pages/tasche.html.erb
@@ -1,2 +1,19 @@
 <h1>Pages#contact</h1>
 <p>Find me in app/views/pages/contact.html.erb</p>
+
+
+<div id="header" class="logo">
+    </div>
+<div class="row">
+        <div class="span12">
+            <ul>
+ 
+                <li>Stores</li>
+                <li>About</li>
+                <li>Tasche</li>
+                <li>Contact us</li>
+
+            </ul>
+        </div>
+    </div>
+
