--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -10,9 +10,10 @@
          $().ready(function() {
     var BV = new $.BigVideo();
     BV.init();
-    BV.show('http://vimeo.com/87150445',{ambient:true});
+    BV.show('http://vjs.zencdn.net/v/oceans.mp4', {ambient:true});
 });
         </script>
+
 
     </head>
 
