--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -1,7 +1,8 @@
 body {
 margin: 0;
 padding: 0;
-color: #fff;
+color: #2B1B17;
+align: center;
 overflow: hidden;
 font-weight: 300;
 font-size: 1em;
