--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -37,7 +37,7 @@ child(1)’).find(‘.big-image’).        animate({opacity:0},500);
 	 </header>
 
 <div class='wrapper'>
-<div class='screen' id='screen-1' data-    video='../../video/RetrospectiveHH.mp4'>
+<div class='screen' id='screen-1' data-    scr='../../video/RetrospectiveHH.mp4'>
 <img src='../../Img/coverhh.png'         class='big-image' />
 </div>
 </div>
