--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -18,7 +18,7 @@ z-index: 0;
 .screen {
 position: relative;
 height: 100%; 
-width: 100%; /* total number of     videos/100%      */
+width: 100%;
 float: left;
 overflow: hidden;
 }
