--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -7,24 +7,29 @@
 
 <script>
 
-BV = new $.BigVideo({forceAutoplay    :isTouch});
+$(document).ready(function() {
+  var BV,
+				      isTouch = Modernizr.touch,
+				      $window = $(window);
+  
+  if (!isTouch) {
+    BV = new $.BigVideo({forceAutoplay:isTouch});
+    BV.init();
+    showVideo();
 
-BV.init();
-showVideo();
+    BV.getPlayer().addEvent('loadeddata', function() {
+      onVideoLoaded();
+    });
+  }
+  function showVideo() {
+    BV.show($('.wrapper .screen:nth-child(1)').attr('data-video'), { ambient: true });
+    $('.wrapper .screen .big-image').css({ opacity: 1 });
+  }
 
-BV.getPlayer(). addEvent(‘loadeddata’, function(){
-onVideoLoaded();
+  function onVideoLoaded() {
+    $('.wrapper .screen:nth-child(1)').find('.big-image').animate({ opacity: 0 }, 500);
+  }
 });
-
-function showVideo() {
-BV.show($(‘.wrapper .screen:nth-    child(1)’).attr(‘data-video’),{ambient:true});
-$(‘.wrapper .screen .big-image’). css({opacity:1});
-}
-
-function onVideoLoaded() {
-$(‘.wrapper .screen:nth-    
-child(1)’).find(‘.big-image’).        animate({opacity:0},500);
-   }
 
  </script>
 
@@ -36,13 +41,11 @@ child(1)’).find(‘.big-image’).        animate({opacity:0},500);
 	        <h1>Von Hamburgern für die Welt</h1>
 	 </header>
 
-<div class='wrapper'>
-<div class='screen' id='screen-1' data-    scr='../../video/RetrospectiveHH.mp4'>
-<img src='../../Img/coverhh.png'         class='big-image' />
+<div class="wrapper">
+  <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
+    <img src="../../Img/coverhh.png" class="big-image" />
+  </div>
 </div>
-</div>
-
-
 </body>
 </html>
 
