--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -37,15 +37,40 @@ $(document).ready(function() {
 
 <body>
 
-   <header>
-	        <h1>Von Hamburgern für die Welt</h1>
-	 </header>
-
+<!--/.Video-Background.Start -->
 <div class="wrapper">
   <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
     <img src="../../Img/coverhh.png" class="big-image" />
+
+<!--/.navbar-start -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+     </div>
+     </div>
+
+
   </div>
-</div>
+</div><!--/.Video-Background.End -->
 </body>
 </html>
 
