--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -36,12 +36,6 @@ $(document).ready(function() {
     </head>
 
 <body>
-
-<!--/.Video-Background.Start -->
-<div class="wrapper">
-  <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
-    <img src="../../Img/coverhh.png" class="big-image" />
-
 <!--/.navbar-start -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -52,23 +46,28 @@ $(document).ready(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Von Hamburgern<br>für die Welt</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+                <a class="products" href="#"><br>items</a>
             </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+          <div class="form-group">
+                <a class="creatives" href="#"><br>creatives</a>
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          <div class="form-group">
+                <a class="bag" href="#"><br>bag</a>
+            </div>
+            
         </div><!--/.navbar-collapse -->
      </div>
      </div>
 
-
+<!--/.Video-Background.Start -->
+<div class="wrapper">
+  <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
+    <img src="../../Img/coverhh.png" class="big-image" />
   </div>
 </div><!--/.Video-Background.End -->
 </body>
