--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -36,6 +36,12 @@ $(document).ready(function() {
     </head>
 
 <body>
+
+<!--/.Video-Background.Start -->
+<div class="wrapper">
+  <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
+    <img src="../../Img/coverhh.png" class="big-image" />
+
 <!--/.navbar-start -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -51,23 +57,18 @@ $(document).ready(function() {
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
-                <a class="products" href="#"><br>items</a>
+              <a href="/tasche.html">Bag</a>
             </div>
-          <div class="form-group">
-                <a class="creatives" href="#"><br>creatives</a>
-            </div>
-          <div class="form-group">
-                <a class="bag" href="#"><br>bag</a>
+           <div class="form-group">
+              <a href="/contact.html">creatives</a>
             </div>
             
         </div><!--/.navbar-collapse -->
      </div>
      </div>
 
-<!--/.Video-Background.Start -->
-<div class="wrapper">
-  <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
-    <img src="../../Img/coverhh.png" class="big-image" />
+
+
   </div>
 </div><!--/.Video-Background.End -->
 </body>
