--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -29,3 +29,10 @@ min-height: 100%;
 height: auto;
 width: auto; 
 }
+
+.container {
+padding-bottom: 20px;
+padding-top: 5px;
+font-size: 1em;
+padding-left: 3px;
+}
