--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -40,27 +40,30 @@ $(document).ready(function() {
 <!--/.Video-Background.Start -->
 <div class="wrapper">
   <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
-    <img src="../../Img/coverhh.png" class="big-image" />
+    <img src="../../Img/speicher.jpg" class="big-image" />
 
 <!--/.navbar-start -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <div type="text" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </div>
           <a class="navbar-brand" href="#">Von Hamburgern<br>für die Welt</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
-              <a href="/tasche.html">Bag</a>
+              <a href="/stores.html">Products</a>
+            </div>
+            <div class="form-group">
+              <a href="/contact.html.erb">Creatives</a>
             </div>
            <div class="form-group">
-              <a href="/contact.html">creatives</a>
+              <a href="/tasche.html">Bag</a>
             </div>
             
         </div><!--/.navbar-collapse -->
