--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -46,12 +46,12 @@ $(document).ready(function() {
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <div type="text" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </div>
+          </button>
           <a class="navbar-brand" href="#">Von Hamburgern<br>für die Welt</a>
         </div>
         <div class="navbar-collapse collapse">
@@ -63,7 +63,7 @@ $(document).ready(function() {
               <a href="/contact.html.erb">Creatives</a>
             </div>
            <div class="form-group">
-              <a href="/tasche.html">Bag</a>
+              <a href="/tasche.html">my Bag</a>
             </div>
             
         </div><!--/.navbar-collapse -->
