--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -60,7 +60,7 @@ $(document).ready(function() {
               <a href="/stores.html">Products</a>
             </div>
             <div class="form-group">
-              <a href="/contact.html.erb">Creatives</a>
+              <a href="/pages/contact">Creatives</a>
             </div>
            <div class="form-group">
               <a href="/tasche.html">my Bag</a>
