--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -35,4 +35,13 @@ padding-bottom: 20px;
 padding-top: 5px;
 font-size: 1em;
 padding-left: 3px;
+opacity: 0.5;
+}
+
+.row-fluid.parallax {
+  background-image: url('../../Img/regenschirm.jpg');
+  height: 200px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: black;
 }
