--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>our Creatives <br> • search Products by Creator • </h1>
+
+ <!-- Wessendorf with parallax -->
+  <div class="row-fluid parallax" data-stellar-background-ratio="0.5">
+      <h2> </h2>
+    </div>   
+
+<div class="Wessendorf" id="wessendorf jewels">
+  <h2> Jewelry from K. Wessendorf</h2>
+</div>   
+  
+  <div class="row-fluid parallax" data-stellar-background-ratio="0.5">
+      <h2> </h2>
+  </div>  
