--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
     <div class="footerhold">
       <footer>
         <p class="footer"> &copy; Fronz Fruchtzwerg Inc. 2014 </p>
+        <a href="/pages/about">Impressum & About</a>
+
       </footer>
     </div> 
 
