--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -50,6 +50,13 @@ backgroundcolor: 000;
     position: fixed;
     text-align: center;
     width: 100%;
+    margin-bottom: 10px;
+}
+
+.footerhold a {
+    color: white;
+    font-size: 1em;
+    padding-bottom: 2px;
 }
 
 .footer {
