--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -67,3 +67,12 @@ backgroundcolor: 000;
     color: white;
     font-size: 15px;
 }
+
+
+.row-fluid.parallax {
+  background-image: url('../../Img/regenschirm.jpg');
+  height: 200px;
+  margin-bottom: 80px;
+  text-align: center;
+  color: black;
+}
