--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -41,7 +41,11 @@ opacity: 0.5;
 .row-fluid.parallax {
   background-image: url('../../Img/regenschirm.jpg');
   height: 200px;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
   text-align: center;
   color: black;
+}
+
+.creatives {
+	height: 150px;
 }
