--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,14 +1,48 @@
-<h1>our Creatives <br> • search Products by Creator • </h1>
+<h1>Hamburg's • Creatives <br> search Products by Creator  </h1>
 
- <!-- Wessendorf with parallax -->
-  <div class="row-fluid parallax" data-stellar-background-ratio="0.5">
-      <h2> </h2>
-    </div>   
 
-<div class="Wessendorf" id="wessendorf jewels">
-  <h2> Jewelry from K. Wessendorf</h2>
-</div>   
-  
-  <div class="row-fluid parallax" data-stellar-background-ratio="0.5">
-      <h2> </h2>
-  </div>  
+ <script>
+$.stellar();
+ </script>
+
+ <section class="one" data-stellar-background-ratio=".5">
+   <div class="padding">
+    <article>
+      <h1>Parallax</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
+      </p>
+    </article>
+  </div>
+</section>
+
+ <section class="two" data-stellar-background-ratio=".5">
+   <div class="padding">
+    <article>
+      <h1>Is</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
+      </p>
+    </article>
+  </div>
+</section>
+
+ <section class="three" data-stellar-background-ratio=".5">
+   <div class="padding">
+    <article>
+      <h1>Ironic</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
+      </p>
+    </article>
+  </div>
+</section>
