--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,48 +1,39 @@
-<h1>Hamburg's • Creatives <br> search Products by Creator  </h1>
+    
+<html>
+<Head>
 
 
  <script>
-$.stellar();
+
+$.stellar({
+	horizontalScrolling: false,
+	responsive: true
+})
+
  </script>
 
- <section class="one" data-stellar-background-ratio=".5">
-   <div class="padding">
-    <article>
-      <h1>Parallax</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
-      </p>
-    </article>
-  </div>
-</section>
 
- <section class="two" data-stellar-background-ratio=".5">
-   <div class="padding">
-    <article>
-      <h1>Is</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
-      </p>
-    </article>
-  </div>
-</section>
+</Head>
 
- <section class="three" data-stellar-background-ratio=".5">
-   <div class="padding">
-    <article>
-      <h1>Ironic</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia molestiae.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis tempora!
-      </p>
-    </article>
-  </div>
-</section>
+ <body>
+
+ <div class="jumbotron">
+ <div class="container">
+  <h1> SEARCH PRODUCTS <br>
+  BY CREATIVES </h1>
+</div>
+</div>
+
+
+<div class="content" id="content1" data-stellar-background-ratio="0.5">
+
+<div class:"Creative_1" >
+<h2> Wessendorf </h2>
+</div>
+
+<div <div class="content" id="content2" data-stellar-background-ratio="0.5">
+
+ <!-- Breaks with parallax END-->
+
+</body>
+</html>
