--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -43,37 +43,8 @@ $(document).ready(function() {
     <img src="../../Img/speicher.jpg" class="big-image" />
 
 <!--/.navbar-start -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Von Hamburgern<br>für die Welt</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <a href="/stores.html">Products</a>
-            </div>
-            <div class="form-group">
-              <a href="/pages/contact">Creatives</a>
-            </div>
-           <div class="form-group">
-              <a href="/tasche.html">my Bag</a>
-            </div>
-            
-        </div><!--/.navbar-collapse -->
-     </div>
-     </div>
-
-
-
-  </div>
-</div><!--/.Video-Background.End -->
+   
+        <!--/.Video-Background.End -->
 </body>
 </html>
 
