--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.hersteller %></td>
+        <td><%= product.creative_id %></td>
         <td><%= product.name %></td>
         <td><%= product.beschreibung %></td>
         <td><%= product.image_url %></td>
