--- a/app/assets/stylesheets/allimportant.css.scss
+++ b/app/assets/stylesheets/allimportant.css.scss
@@ -1,21 +1,34 @@
 
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic);
+
 
 body {
-		font-family: 'Droid Sans', sans-serif;
+        font-family: 'Lato', sans-serif;
         color: #FFFFFF;
         text-align: center;
 }
 
+body h1{
+    padding-top: 82px;
+}
 
 .navbar {
-padding-bottom: 2px;
-padding-top: 2px;
+padding-bottom: 1px;
+padding-top: 1px;
+font-size: 1em;
+padding-left: 3px;
+opacity: 0.4;
+color: #FFFFFF;
+backgroundcolor: 000;
+-webkit-box-shadow: none;
+}
+
+
+.container {
+padding-bottom: 20px;
 font-size: 1em;
 padding-left: 3px;
 opacity: 0.5;
-color: #FFFFFF;
-backgroundcolor: 000;
 }
 
 .navbar-inverse .navbar-brand {
@@ -30,18 +43,26 @@ backgroundcolor: 000;
 
 .navbar-collapse {
     font-size: 18px;
-    padding-top: 5px;
+    padding-top: 10px;
     padding-bottom: 5px;
+    opacity: 1;
 }
 
 .navbar-collapse a {
     color: white;
     font-weight: 100;
     padding-left: 20px;
+    opacity: 1;
+}
+
+.navbar a {
+    opacity: 1;
+    color: white;
 }
 
 .container {
-    color: #FFFFFF
+    opacity: 1;
+    color: #ffffff;
 }
 
 .footerhold {
@@ -68,11 +89,3 @@ backgroundcolor: 000;
     font-size: 15px;
 }
 
-
-.row-fluid.parallax {
-  background-image: url('../../Img/regenschirm.jpg');
-  height: 200px;
-  margin-bottom: 80px;
-  text-align: center;
-  color: black;
-}
