--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -8,6 +8,10 @@ font-weight: 300;
 font-size: 1em;
 }
 
+.h1 {
+	margin-top: 82px;
+}
+
 .wrapper {
 position: absolute;
 width: 100%;
@@ -30,13 +34,6 @@ height: auto;
 width: auto; 
 }
 
-.container {
-padding-bottom: 20px;
-padding-top: 5px;
-font-size: 1em;
-padding-left: 3px;
-opacity: 0.5;
-}
 
 .row-fluid.parallax {
   background-image: url('../../Img/regenschirm.jpg');
