--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,20 @@
 <html>
 <head>
 
-  <title>von hamburgern für die welt</title>
 
-  
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
 
+    <style>
+      body {
+      font-family: 'Lato', sans-serif;        
+      font-size: 48px;
+      }
+    </style>
+
+<title>v. Hamburgern für die Welt</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+
 
 
 
@@ -28,8 +36,38 @@
  
   <%= csrf_meta_tags %>
 
-</head>
 
+ <script>
+$.stellar();
+ </script>
+
+
+</head>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/pages/stores">VON HAMBURGERN<br>FÜR DIE WELT</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <div style="color:#FFFFFF" class="form-group">
+              <a  href="/pages/stores.html">PRODUCTS</a>
+            </div>
+            <div class="form-group">
+              <a href="/pages/contact.html">CREATIVES</a>
+            </div>
+            <div class="form-group">
+              <a href="/pages/tasche.html">MY BAG</a>
+            </div>
+            </div><!--/.navbar-collapse -->
+            </div>
+            </div>
+            </div>
+            </div>
+          </form>
+           </div>
+           </div>
+        </div>
 <body>
 
    
@@ -38,6 +76,8 @@
 
 
 </body>
+
+
 
     <div class="footerhold">
       <footer>
