--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -36,7 +36,7 @@ width: auto;
 
 
 .row-fluid.parallax {
-  background-image: url('../../Img/regenschirm.jpg');
+  background-image: url('../../Img/healthy.jpg');
   height: 200px;
   margin-bottom: 80px;
   text-align: center;
