--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
 
-            <h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+            <h1>#about melotos</h1>
+
+<p>me</p>
+<p>testimonials</p>
