--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -40,7 +40,7 @@ $(document).ready(function() {
 <!--/.Video-Background.Start -->
 <div class="wrapper">
   <div class="screen" id="screen-1" data-video="http://vimeo.com/87150445">
-    <img src="../../Img/speicher.jpg" class="big-image" />
+    <img src="../../Img/healthy.jpg" class="big-image" />
 
 <!--/.navbar-start -->
    
