--- a/app/assets/stylesheets/creatives.css.scss
+++ b/app/assets/stylesheets/creatives.css.scss
@@ -1,8 +1,7 @@
 .jumbotron {
-background-image: url("../../Img/speicher.jpg");
+background-image: url("../../Img/beetroot.jpg");
 width: 100%;
-z-index: 0;
-padding-bottom: 10px;
+padding-bottom: 40px;
 }
 
 .container h1 {
@@ -14,7 +13,7 @@ padding-bottom: 10px;
 }
 
 #content1 {
-  background-image: url('../../Img/speicher.jpg');
+  background-image: url('../../Img/coaching.jpg');
   height: 300px;
   margin-bottom: 20px;
   text-align: center;
