--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       }
     </style>
 
-<title>v. Hamburgern für die Welt</title>
+<title>Coaching - Melotos</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 
@@ -46,19 +46,30 @@ $.stellar();
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/pages/stores">VON HAMBURGERN<br>FÜR DIE WELT</a>
+          <a class="navbar-brand" href="#">MELOTOS<img scr="../../Img/melotos.png"></a>
+           <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div style="color:#FFFFFF" class="form-group">
-              <a  href="/pages/stores.html">PRODUCTS</a>
+              <a  href="/pages/stores.html">home</a>
             </div>
             <div class="form-group">
-              <a href="/pages/contact.html">CREATIVES</a>
+              <a href="/pages/tasche.html">what</a>
             </div>
             <div class="form-group">
-              <a href="/pages/tasche.html">MY BAG</a>
+              <a href="/pages/about.html">about</a>
             </div>
+            <div class="form-group">
+              <a href="/pages/contact.html">blog</a>
+            </div>
+
             </div><!--/.navbar-collapse -->
             </div>
             </div>
