--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,39 +1,3 @@
-    
-<html>
-<Head>
 
-
- <script>
-
-$.stellar({
-	horizontalScrolling: false,
-	responsive: true
-})
-
- </script>
-
-
-</Head>
-
- <body>
-
- <div class="jumbotron">
- <div class="container">
-  <h1> SEARCH PRODUCTS <br>
-  BY CREATIVES </h1>
-</div>
-</div>
-
-
-<div class="content" id="content1" data-stellar-background-ratio="0.5">
-
-<div class:"Creative_1" >
-<h2> Wessendorf </h2>
-</div>
-
-<div <div class="content" id="content2" data-stellar-background-ratio="0.5">
-
- <!-- Breaks with parallax END-->
-
-</body>
-</html>
+            <h1>Pages#contact</h1>
+<p>receipies</p>
