--- a/app/views/pages/tasche.html.erb
+++ b/app/views/pages/tasche.html.erb
@@ -1,20 +1,42 @@
 
-            <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<html>
+<Head>
 
 
-<div id="header" class="logo">
-    </div>
-<div class="row">
-        <div class="span12">
-            <ul>
- 
-                <li>Stores</li>
-                <li>About</li>
-                <li>Tasche</li>
-                <li>Contact us</li>
+ <script>
 
-            </ul>
-        </div>
-    </div>
+$.stellar({
+    horizontalScrolling: false,
+    responsive: true
+})
 
+ </script>
+
+
+</Head>
+
+ <body>
+
+ <div class="jumbotron">
+ <div class="container">
+  <h1> What do we do here? </h1>
+</div>
+</div>
+
+
+<div class="content" id="content1" data-stellar-background-ratio="0.5">
+
+<div class:"Creative_1" >
+<h2> coaching </h2>
+<h2> approach </h2>
+<h2> clients </h2>
+</div>
+
+<div <div class="content" id="content2" data-stellar-background-ratio="0.5">
+
+ <!-- Breaks with parallax END-->
+
+
+
+</body>
+</html>
